# 3pg

./: .gitignore  .gitmodules  3pg C release Notes.txt  CMakeLists.txt  CMakePresets.json  README.md  Site.txt  Species.txt  make_build.bat  null  run.bat  run_tests.bat  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
3pg_sc/3pg_src/: 3pg.cpp  Data_io.cpp  GDALRasterImage.cpp  The_3PG_Model.cpp  getopt.c  getopt.cpp  util.cpp
3pg_sc/jg_gridio/: ByteGrid.hpp  Exception.hpp  FloatGrid.hpp  Grid.hpp  HeaderFname.hpp
apps/: 3pg.cpp  3pgModel.cpp  CMakeLists.txt  DataInput.cpp  DataInput.hpp  DataOutput.cpp  DataOutput.hpp  Data_io.cpp  Data_io.hpp  GDALRasterImage.cpp  GDALRasterImage.hpp  MYDate.cpp  MYDate.h  ParamStructs.hpp  The_3PG_Model.cpp  The_3PG_Model.hpp  loggerForTest.cpp  main.cpp  util.cpp  util.hpp
enc_temp_folder/a58dbcad97dea312a620b961ddadbbee/: Data_io.cpp
include/: .gitignore  Data_io.hpp  GDALRasterImage.hpp  Params.hpp  The_3PG_Model.hpp  util.hpp
site/: p_yeart.flt  p_yeart.hdr
tests/: CMakeLists.txt  DataInputTests.cpp  DataOutputTests.cpp  GDALRasterImageTest.cpp
tests/test_files/DataInputTests/: 1997irr.tif.aux.xml  NFFD02.tif  NFFD04.tif  NFFD05.tif  NFFD06.tif  NFFD07.tif  NFFD08.tif  NFFD09.tif  NFFD10.tif  NFFD11.tif  NFFD12.tif  differentLocation.tif  formatTest.txt  irr1997.tif  manageTableTest1.txt  manageTableTest2.txt  manageTableTest3.txt  test1.tif  test2.tif  test3.tif
tests/test_files/DataInputTests/runPeriod/: EndYear1872.tif  EndYearVariable.tif  yearPlanted1869.tif  yearPlantedVariable.tif
tests/test_files/DataOutputTests/: refgrid.tif
tests/test_files/DataOutputTests/outputs/: .gitignore
